# qdhc

./: .gitignore  CMakeLists.txt  Makefile  flake.nix  test.hs  test_each.hs
cmake/: CMakeDetermineHaskellCompiler.cmake  CMakeHaskellCompiler.cmake.in  CMakeHaskellInformation.cmake  CMakeTestHaskellCompiler.cmake
nix/: qdhc.nix
src/: compiler.c
tests/: 10Factorial.hs  2Arg.hs  3Arg.hs  5Factorial.hs  Addition.hs  CommentBeforeDecl.hs  Div.hs  Double.hs  EqFalse.hs  EqTrue.hs  Fib10.hs  Gte.hs  LetDep.hs  LetMulti.hs  Lt.hs  Mod.hs  Multiplication.hs  Negation.hs  Neq.hs  SignNeg.hs  SignPos.hs  SignZero.hs  SubInBody.hs  SubInParens.hs  Subtraction.hs  test_full.hs  test_simple_let.hs
